syntax = "proto3";

option csharp_namespace = "JiraBoardgRPC";

package user;

service User {
  rpc GetUser (UserIdRequest) returns (UserResponse);
}

message UserIdRequest {
    int32 id = 1;
}

message UserResponse {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    int32 id = 4;
}

message UserModel {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    int32 id = 4;
    string password = 5;
}